window: Fix Clear Highlight to actually clear the highlight

https://bugzilla.gnome.org/show_bug.cgi?id=792885